k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: access-management
  labels:
    app: access-management
spec:
  replicas: 2
  selector:
    matchLabels:
      app: access-management
  template:
    metadata:
      labels:
        app: access-management
    spec:
      containers:
        - name: access-management
          image: registry.nosi.cv/igrp/access-management-api:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}
