k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: access-management-service
  labels:
    app: access-management
spec:
  selector:
    app: access-management
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
