k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-engine-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: wayvant-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-engine-service
                port:
                  number: 8080
